Add Splash and Home with coordinators.

--- a/MVVMC.iOS/Scenes/Splash/Splash.storyboard
+++ b/MVVMC.iOS/Scenes/Splash/Splash.storyboard
@@ -28,6 +28,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="splashLabel" destination="tnx-w0-U1d" id="lV8-Vq-CMB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
